--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Peterfurax/permanencierAPI#readme",
   "dependencies": {
     "compression": "^1.7.2",
+    "data-store": "^1.0.0",
     "express": "^4.16.2"
   }
 }
